--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
     "pinia": "^3.0.1",
-    "better-sqlite3": "^11.8.1",
-    "xlsx": "^0.18.5"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
